--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -3,34 +3,63 @@
   <form (ngSubmit)="onSubmit()" [formGroup]="kittenForm">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" class="form-control" formControlName="name" id="name" [(ngModel)]="kitten.name">
-      <div [hidden]="name.valid || name.pristine"
+      <input type="text" class="form-control" formControlName="name" id="name">
+      <div *ngIf="kittenName.invalid && (kittenName.dirty || kittenName.touched)"
            class="alert alert-danger">
-        Name is required
+        <div *ngIf="kittenName.errors.required">
+          Speed is required.
+        </div>
+
+        <div *ngIf="kittenName.errors.min || speed.errors.max">
+          Speed must be between 0 and 100.
+        </div>
       </div>
     </div>
 
 
     <div class="form-group">
       <label for="speed">Speed</label>
-      <input type="number" class="form-control" formControlName="speed" id="speed" name="speed"
-             [(ngModel)]="kitten.speed">
-      <div [hidden]="kittenForm.get('speed').valid"
+      <input type="number" class="form-control" formControlName="speed" id="speed">
+      <div *ngIf="speed.invalid && (speed.dirty || speed.touched)"
            class="alert alert-danger">
-        Speed must be between 0 and 100
+        <div *ngIf="speed.errors.required">
+          Speed is required.
+        </div>
+
+        <div *ngIf="speed.errors.min || speed.errors.max">
+          Speed must be between 0 and 100.
+        </div>
       </div>
     </div>
 
     <div class="form-group">
       <label for="strength">Strength</label>
-      <input type="number" class="form-control" formControlName="strength" id="strength"
-             name="strength" [(ngModel)]="kitten.strength">>
+      <input type="number" class="form-control" formControlName="strength" id="strength">
+      <div *ngIf="strength.invalid && (strength.dirty || strength.touched)"
+           class="alert alert-danger">
+        <div *ngIf="strength.errors.required">
+          Strength is required.
+        </div>
+
+        <div *ngIf="strength.errors?.min || strength.errors?.max">
+          Strength must be between 0 and 100.
+        </div>
+      </div>
     </div>
 
     <div class="form-group">
       <label for="cuteness">Cuteness</label>
-      <input type="number" class="form-control" formControlName="cuteness" id="cuteness" name="cuteness"
-             [(ngModel)]="kitten.cuteness">>
+      <input type="number" class="form-control" formControlName="cuteness" id="cuteness" name="cuteness">
+      <div *ngIf="cuteness.invalid && (cuteness.dirty || cuteness.touched)"
+           class="alert alert-danger">
+        <div *ngIf="cuteness.errors.required">
+          Cuteness is required.
+        </div>
+
+        <div *ngIf="cuteness.errors.min || cuteness.errors.max">
+          Cuteness must be between 0 and 100.
+        </div>
+      </div>
     </div>
     <p>Battlescore: {{kitten.battlescore}}</p>
     <button type="submit" class="btn btn-success" [disabled]="!kittenForm.valid">Submit</button>
@@ -39,3 +68,4 @@
 </div>
 <h1>{{kitten.name}}</h1>
 <button class="btn btn-default" (click)="goBack()">go back</button>
+<ng-template #error></ng-template>
