--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,4 +1,5 @@
 <h2>Kittenlist Component</h2>
 <ul *ngFor="let kitten of kittens">
-  <a routerLink="/detail/{{kitten.id}}">Name: {{kitten.name}}, Battle Score: {{ kitten.battlescore}}</a>
+  <a routerLink="/detail/{{kitten.id}}">Name: {{kitten.name}}, Battle Score:
+    {{battlescoreService.calculateBattlePoints(kitten) | number:'1.0-2'}}</a>
 </ul>
