--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,4 +1,3 @@
-<h2>Kittenlist Component</h2>
-<ul *ngFor="let kitten of kittens">
+<ul class="list-group" *ngFor="let kitten of kittens">
   <app-list-item [kitten]="kitten"></app-list-item>
 </ul>
