--- a/src/app/list-item/list-item.component.html
+++ b/src/app/list-item/list-item.component.html
@@ -1,9 +1,11 @@
-<li class="list-group-item" (click)="view()">
-  <p>{{kitten.name}}</p>
-  <p>{{kitten.cuteness}}</p>
-  <p>{{battlescoreService.calculateBattlePoints(kitten) | number:'1.0-2'}}</p>
-  <button (click)="delete()" class="btn btn-warning">Delete</button>
-  <a routerLink="/detail/{{kitten.id}}">
-    <button class="btn btn-default">Edit</button>
-  </a>
+<li class="list-group-item  d-flex justify-content-between align-items-center" (click)="view()">
+  <span class="w-25">{{kitten.name}}</span>
+  <span class="w-10">{{kitten.cuteness}}</span>
+  <span class="w-10">{{battlescoreService.calculateBattlePoints(kitten) |
+  number:'1.0-2'}}</span>
+  <div class="icon-box w-25 justify-content-end d-flex">
+    <a href="/detail/{{kitten.id}}"><i class="fa fa-pencil fa-2x"></i></a>
+    <a (click)="delete()"><i class="fa fa-remove fa-2x"></i></a>
+  </div>
+
 </li>
