--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-lg">
     <div class="mx-auto">
-      <a class="" href="#">
-        <img src="//placehold.it/500x140/ccff00" class="rounded-circle">
+      <a class="wow" href="#">
+        <p><a>Battle Kittens</a></p>
       </a>
     </div>
   </nav>
