--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
+
+@font-face {
+  font-family: 'metal';
+  src: url('assets/metal.ttf');
+}
+
+.wow {
+  font-family: metal;
+}
+
+body {
+  background-color: #222222;
+
+}
