A bunch of styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,11 @@
 <header>
   <nav class="navbar navbar-expand-lg">
     <div class="mx-auto">
-      <a class="wow" href="#">
-        <p><a>Battle Kittens</a></p>
-      </a>
+      <h1 class="header-text" href="#">
+        Battle Kittens
+      </h1>
     </div>
   </nav>
-</header>
-<div class="container">
   <ul class="nav justify-content-center">
     <li class="nav-item">
       <a class="nav-link active" href="#">Kittens</a>
@@ -19,6 +17,8 @@
       <a class="nav-link" href="#">Settings</a>
     </li>
   </ul>
+</header>
+<div class="container">
   <router-outlet></router-outlet>
 </div>
 <a href="https://your-url" class="github-corner" aria-label="View source on Github">
@@ -59,10 +59,8 @@
   }
 }</style>
 <footer class="page-footer fixed-bottom">
-
-  <div class="footer-copyright text-center py-3">Battlekittens by
+  <div class="footer-copyright text-center py-3"><span>Made by</span>
     <a href="https://twitter.com/hschnedlitz">@hschnedlitz</a>
   </div>
-
 </footer>
 
