--- a/src/app/list-item/list-item.component.scss
+++ b/src/app/list-item/list-item.component.scss
@@ -17,6 +17,15 @@
 
 }
 
+.w-10 {
+  width: 10%;
+  text-align: right;
+}
+
+.w-20 {
+  width: 20%;
+}
+
 .list-group-item {
   span {
     color: white;
