--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,16 +21,50 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<a href="https://your-url" class="github-corner" aria-label="View source on Github">
+<a href="https://github.com/hschne/battle-kittens" class="github-corner" aria-label="View source on Github">
   <svg width="80" height="80" viewBox="0 0 250 250"
-       style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
-    <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+       style="position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+    <defs>
+      <filter id="sofGlow" height="300%" width="300%" x="0%" y="0%">
+        <!-- Thicken out the original shape -->
+        <feMorphology operator="dilate" radius="3" in="SourceAlpha" result="thicken"/>
+
+        <!-- Use a gaussian blur to create the soft blurriness of the glow -->
+        <feGaussianBlur in="thicken" stdDeviation="10" result="blurred"/>
+
+        <!-- Change the colour -->
+        <feFlood flood-color="#BA01FF" result="glowColor"/>
+
+        <!-- Color in the glows -->
+        <feComposite in="glowColor" in2="blurred" operator="in" result="softGlow_colored"/>
+
+        <feMerge>
+          <feMergeNode in="softGlow_colored"/>
+          <feMergeNode in="SourceGraphic"/>
+        </feMerge>
+      </filter>
+      <filter id="whiteglow" height="300%" width="300%" x="0%" y="0%">
+        <!-- Thicken out the original shape -->
+        <feMorphology operator="dilate" radius="2" in="SourceAlpha" result="thicken"/>
+        <feGaussianBlur in="thicken" stdDeviation="10" result="blurred"/>
+        <feFlood flood-color="#FFFFFF" result="glowColor"/>
+        <feComposite in="glowColor" in2="blurred" operator="in" result="softGlow_colored"/>
+
+        <feMerge>
+          <feMergeNode in="softGlow_colored"/>
+          <feMergeNode in="SourceGraphic"/>
+        </feMerge>
+      </filter>
+    </defs>
+
+
+    <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z" filter="url(#sofGlow)"></path>
     <path
       d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
-      fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+      fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm" filter="url(#whiteglow)"></path>
     <path
       d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
-      fill="currentColor" class="octo-body"></path>
+      fill="currentColor" class="octo-body" filter="url(#whiteglow)"></path>
   </svg>
 </a>
 <style>.github-corner:hover .octo-arm {
@@ -58,9 +92,12 @@
     animation: octocat-wave 560ms ease-in-out
   }
 }</style>
-<footer class="page-footer fixed-bottom">
-  <div class="footer-copyright text-center py-3"><span>Made by</span>
-    <a href="https://twitter.com/hschnedlitz">@hschnedlitz</a>
+<footer class="text-center page-footer fixed-bottom">
+
+  <div class="footer-copyright text-center py-3">
+    <p>No kittens were harmed in the making of this website.</p>
+    <span>Made By </span>
+    <a href="https://twitter.com/hschnedlitz"> hschnedlitz</a>
   </div>
 </footer>
 
