--- a/src/app/detail/detail.component.scss
+++ b/src/app/detail/detail.component.scss
@@ -1,17 +1,21 @@
 @import "~src/assets/scss/variables";
 
-.ng-valid[required], .ng-valid.required  {
-  border-left: 5px solid #42A948; /* green */
-}
-
-.ng-invalid:not(form)  {
-  border-left: 5px solid $pink; /* red */
+.alert {
+  background: none;
+  border: none;
+  font-size: 1.1em;
+  color: #ffffff;
+  text-shadow: 0 0 1px #fff, 0 0 5px #fff, 0 0 5px #fff, 0 0 10px #ff00de, 0 0 15px #ff00de, 0 0 20px #ff00de, 0 0 25px #ff00de, 0 0 34px #ff00de;
 }
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+form {
+  margin-top: 5em;
 }
 
 .row {
@@ -30,6 +34,12 @@ label {
 
 p {
   font-size: 1.3em;
+  color: white;
+}
+
+img {
+  border: white solid 2px;
+  margin: 10px
 }
 
 .button-bar {
@@ -49,6 +59,9 @@ p {
     &:hover {
       text-decoration: underline;
     }
+    &:active {
+      background: none;
+    }
   }
 }
 
@@ -57,7 +70,6 @@ p {
   padding-left: 0.75rem;
   width: 100%;
 }
-
 
 input {
   background-color: $dark;
