--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,3 +1,3 @@
 <ul class="list-group list-group-flush" *ngFor="let kitten of kittens">
-  <app-list-item [kitten]="kitten"></app-list-item>
+  <app-list-item [kitten]=kitten></app-list-item>
 </ul>
