--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -8,7 +8,7 @@
         <div class="col-sm-8">
           <div class="form-group row">
             <label for="name" class="col-sm-3 col-form-label">Name</label>
-            <input type="text" class="form-control col-sm-9" autocomplete="off" formControlName="name" id="name">
+            <input type="text" class="form-control col-sm-9" autocomplete="off" formControlName="name" id="kittenName">
             <div *ngIf="kittenName.invalid && (kittenName.dirty || kittenName.touched)"
                  class="alert alert-danger">
               <div *ngIf="kittenName.errors.required">
